--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
@@ -9,11 +9,13 @@
     </sectionGroup>
   </configSections>
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-        <add assembly="System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-      </assemblies>
-    </compilation>
+      <!-- SET SESSION TIMEOUT TO 1 MINUTE 
+      <sessionState mode="InProc" cookieless="false" timeout="1"></sessionState>  -->
+      <compilation debug="true" targetFramework="4.0"> 
+        <assemblies>
+            <add assembly="System.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        </assemblies>
+      </compilation>
   </system.web>
   <system.net>
     <defaultProxy enabled="true" />
